--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,11 @@ python:
   - "3.5"
 
 env:
-  - DJANGO_VERSION=1.9
-  - DJANGO_VERSION=1.9.1
-  - DJANGO_VERSION=1.9.2
-  - DJANGO_VERSION=1.9.3
-  - DJANGO_VERSION=1.9.4
   - DJANGO_VERSION=1.9.5
 
 install:
   - pip install -q Django==$DJANGO_VERSION
 
-script: python tools.py test
+script:
+  - cd django-mjml
+  - python tools.py test
