--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ python:
 
 env:
   - DJANGO_VERSION=1.9.5
+  
+before_install:
+  - curl -sL https://deb.nodesource.com/setup_4.x | sudo -E bash -
+  - apt-get install -y nodejs
+  - npm install -g mjml
 
 install:
   - pip install -q Django==$DJANGO_VERSION
