--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ env:
   - DJANGO_VERSION=1.9.5
   
 before_install:
-  - npm cache clean -f 
-  - npm install n
-  - n stable
+  - sudo npm cache clean -f 
+  - sudo npm install -g n
+  - sudo n stable
   - npm install mjml
   - node --version
   - mjml --version
