--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,7 @@ env:
   - DJANGO_VERSION=1.9.5
   
 before_install:
-  - npm cache clean -f 
-  - npm install -g n
-  - sudo n stable
+  - npm update 
   - npm install mjml
   - node --version
   - mjml --version
