--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - nvm install stable
   - nvm use stable
   - npm install
-  - npm install mjml
+  - npm install -g mjml
   - node --version
   - mjml --version
   - whereis node
