Update travis conf

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,14 @@ python:
   - "3.5"
 
 env:
-  - DJANGO_VERSION=1.9.9
-  - DJANGO_VERSION=1.10
-  - MJML_VERSION=2.0
-  - MJML_VERSION=2.1
-  - MJML_VERSION=2.2
-  - MJML_VERSION=2.3
+  - DJANGO_VERSION="<1.10" MJML_VERSION=2.0
+  - DJANGO_VERSION="<1.10" MJML_VERSION=2.1
+  - DJANGO_VERSION="<1.10" MJML_VERSION=2.2
+  - DJANGO_VERSION="<1.10" MJML_VERSION=2.3
+  - DJANGO_VERSION="<1.11" MJML_VERSION=2.0
+  - DJANGO_VERSION="<1.11" MJML_VERSION=2.1
+  - DJANGO_VERSION="<1.11" MJML_VERSION=2.2
+  - DJANGO_VERSION="<1.11" MJML_VERSION=2.3
 
 before_install:
   - . $HOME/.nvm/nvm.sh
@@ -20,7 +22,7 @@ before_install:
 install:
   - npm install mjml@$MJML_VERSION
   - node_modules/.bin/mjml --version
-  - pip install -q Django==$DJANGO_VERSION
+  - pip install -U "Django$DJANGO_VERSION"
 
 script:
   - python tools.py test
