Add django 1.8 support

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ python:
   - "3.5"
 
 env:
+  - DJANGO_VERSION="<1.9" MJML_VERSION=2.0
+  - DJANGO_VERSION="<1.9" MJML_VERSION=2.1
+  - DJANGO_VERSION="<1.9" MJML_VERSION=2.2
+  - DJANGO_VERSION="<1.9" MJML_VERSION=2.3
   - DJANGO_VERSION="<1.10" MJML_VERSION=2.0
   - DJANGO_VERSION="<1.10" MJML_VERSION=2.1
   - DJANGO_VERSION="<1.10" MJML_VERSION=2.2
