Add support django 1.11. Release 0.3.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,12 @@ env:
   - DJANGO_VERSION="<1.11" MJML_VERSION=3.2.2
   - DJANGO_VERSION="<1.11" MJML_VERSION=3.3.0
 
+  - DJANGO_VERSION="<1.12" MJML_VERSION=2.3.3
+  - DJANGO_VERSION="<1.12" MJML_VERSION=3.0.2
+  - DJANGO_VERSION="<1.12" MJML_VERSION=3.1.1
+  - DJANGO_VERSION="<1.12" MJML_VERSION=3.2.2
+  - DJANGO_VERSION="<1.12" MJML_VERSION=3.3.0
+
 before_install:
   - . $HOME/.nvm/nvm.sh
   - nvm install stable
