--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,14 @@ env:
   - DJANGO_VERSION="<2.1" MJML_VERSION=3.2.2
   - DJANGO_VERSION="<2.1" MJML_VERSION=3.3.5
 
+matrix:
+  exclude:
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=2.3.3}
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.0.2}
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.1.1}
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.2.2}
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.3.5}
+
 before_install:
   - . $HOME/.nvm/nvm.sh
   - nvm install stable
