--- a/.travis.yml
+++ b/.travis.yml
@@ -11,24 +11,69 @@ env:
   - DJANGO_VERSION="<1.9" MJML_VERSION=3.1.1
   - DJANGO_VERSION="<1.9" MJML_VERSION=3.2.2
   - DJANGO_VERSION="<1.9" MJML_VERSION=3.3.0
+  - DJANGO_VERSION="<1.9" MJML_VERSION=3.3.1
+  - DJANGO_VERSION="<1.9" MJML_VERSION=3.3.2
+  - DJANGO_VERSION="<1.9" MJML_VERSION=3.3.3
+  - DJANGO_VERSION="<1.9" MJML_VERSION=3.3.4
+  - DJANGO_VERSION="<1.9" MJML_VERSION=3.3.5
 
   - DJANGO_VERSION="<1.10" MJML_VERSION=2.3.3
   - DJANGO_VERSION="<1.10" MJML_VERSION=3.0.2
   - DJANGO_VERSION="<1.10" MJML_VERSION=3.1.1
   - DJANGO_VERSION="<1.10" MJML_VERSION=3.2.2
   - DJANGO_VERSION="<1.10" MJML_VERSION=3.3.0
+  - DJANGO_VERSION="<1.10" MJML_VERSION=3.3.1
+  - DJANGO_VERSION="<1.10" MJML_VERSION=3.3.2
+  - DJANGO_VERSION="<1.10" MJML_VERSION=3.3.3
+  - DJANGO_VERSION="<1.10" MJML_VERSION=3.3.4
+  - DJANGO_VERSION="<1.10" MJML_VERSION=3.3.5
 
   - DJANGO_VERSION="<1.11" MJML_VERSION=2.3.3
   - DJANGO_VERSION="<1.11" MJML_VERSION=3.0.2
   - DJANGO_VERSION="<1.11" MJML_VERSION=3.1.1
   - DJANGO_VERSION="<1.11" MJML_VERSION=3.2.2
   - DJANGO_VERSION="<1.11" MJML_VERSION=3.3.0
+  - DJANGO_VERSION="<1.11" MJML_VERSION=3.3.1
+  - DJANGO_VERSION="<1.11" MJML_VERSION=3.3.2
+  - DJANGO_VERSION="<1.11" MJML_VERSION=3.3.3
+  - DJANGO_VERSION="<1.11" MJML_VERSION=3.3.4
+  - DJANGO_VERSION="<1.11" MJML_VERSION=3.3.5
 
   - DJANGO_VERSION="<1.12" MJML_VERSION=2.3.3
   - DJANGO_VERSION="<1.12" MJML_VERSION=3.0.2
   - DJANGO_VERSION="<1.12" MJML_VERSION=3.1.1
   - DJANGO_VERSION="<1.12" MJML_VERSION=3.2.2
   - DJANGO_VERSION="<1.12" MJML_VERSION=3.3.0
+  - DJANGO_VERSION="<1.12" MJML_VERSION=3.3.1
+  - DJANGO_VERSION="<1.12" MJML_VERSION=3.3.2
+  - DJANGO_VERSION="<1.12" MJML_VERSION=3.3.3
+  - DJANGO_VERSION="<1.12" MJML_VERSION=3.3.4
+  - DJANGO_VERSION="<1.12" MJML_VERSION=3.3.5
+
+  - DJANGO_VERSION="<2.1" MJML_VERSION=2.3.3
+  - DJANGO_VERSION="<2.1" MJML_VERSION=3.0.2
+  - DJANGO_VERSION="<2.1" MJML_VERSION=3.1.1
+  - DJANGO_VERSION="<2.1" MJML_VERSION=3.2.2
+  - DJANGO_VERSION="<2.1" MJML_VERSION=3.3.0
+  - DJANGO_VERSION="<2.1" MJML_VERSION=3.3.1
+  - DJANGO_VERSION="<2.1" MJML_VERSION=3.3.2
+  - DJANGO_VERSION="<2.1" MJML_VERSION=3.3.3
+  - DJANGO_VERSION="<2.1" MJML_VERSION=3.3.4
+  - DJANGO_VERSION="<2.1" MJML_VERSION=3.3.5
+
+
+matrix:
+  exclude:
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=2.3.3 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.0.2 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.1.1 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.2.2 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.3.0 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.3.1 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.3.2 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.3.3 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.3.4 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.3.5 }
 
 before_install:
   - . $HOME/.nvm/nvm.sh
