--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
   - DJANGO_VERSION="<1.9" MJML_VERSION=3.2.2
   - DJANGO_VERSION="<1.9" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<1.9" MJML_VERSION=4.0.5
+  - DJANGO_VERSION="<1.9" MJML_VERSION=4.1.0
 
   - DJANGO_VERSION="<1.10" MJML_VERSION=2.3.3
   - DJANGO_VERSION="<1.10" MJML_VERSION=3.0.2
@@ -19,6 +20,7 @@ env:
   - DJANGO_VERSION="<1.10" MJML_VERSION=3.2.2
   - DJANGO_VERSION="<1.10" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<1.10" MJML_VERSION=4.0.5
+  - DJANGO_VERSION="<1.10" MJML_VERSION=4.1.0
 
   - DJANGO_VERSION="<1.11" MJML_VERSION=2.3.3
   - DJANGO_VERSION="<1.11" MJML_VERSION=3.0.2
@@ -26,6 +28,7 @@ env:
   - DJANGO_VERSION="<1.11" MJML_VERSION=3.2.2
   - DJANGO_VERSION="<1.11" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<1.11" MJML_VERSION=4.0.5
+  - DJANGO_VERSION="<1.11" MJML_VERSION=4.1.0
 
   - DJANGO_VERSION="<1.12" MJML_VERSION=2.3.3
   - DJANGO_VERSION="<1.12" MJML_VERSION=3.0.2
@@ -33,6 +36,7 @@ env:
   - DJANGO_VERSION="<1.12" MJML_VERSION=3.2.2
   - DJANGO_VERSION="<1.12" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<1.12" MJML_VERSION=4.0.5
+  - DJANGO_VERSION="<1.12" MJML_VERSION=4.1.0
 
   - DJANGO_VERSION="<2.1" MJML_VERSION=2.3.3
   - DJANGO_VERSION="<2.1" MJML_VERSION=3.0.2
@@ -40,6 +44,7 @@ env:
   - DJANGO_VERSION="<2.1" MJML_VERSION=3.2.2
   - DJANGO_VERSION="<2.1" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<2.1" MJML_VERSION=4.0.5
+  - DJANGO_VERSION="<2.1" MJML_VERSION=4.1.0
 
 matrix:
   exclude:
@@ -49,6 +54,7 @@ matrix:
     - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.2.2 }
     - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.3.5 }
     - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.0.5 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.1.0 }
 
 before_install:
   - . $HOME/.nvm/nvm.sh
