Update dockerfile and readme

--- a/docker/mjml-tcpserver/Dockerfile
+++ b/docker/mjml-tcpserver/Dockerfile
@@ -13,4 +13,6 @@ ENV HOST="0.0.0.0"
 ENV PORT="28101"
 ENV MJML_ARGS="--mjml.minify=true --mjml.validationLevel=strict"
 
+EXPOSE 28101
+
 ENTRYPOINT ["/bin/sh", "-c", "node tcpserver.js $MJML_ARGS --host=$HOST --port=$PORT"]
