Added big email test case in cmd mode

--- a/requirements_2.7.txt
+++ b/requirements_2.7.txt
@@ -1,9 +1,9 @@
-pip==10.0.1
-setuptools
-wheel==0.31.1
-twine
+pip==18.1
+setuptools==40.4.3
+wheel==0.32.1
+twine==1.12.1
 
 django<1.12
 coverage==4.5.1
 six==1.11.0
-ndg-httpsclient==0.5.0
+ndg-httpsclient==0.5.1
