--- a/.pyup.yml
+++ b/.pyup.yml
@@ -1,11 +1,8 @@
 branch: develop
-schedule: "every week on wednesday"
+schedule: "every month"
 search: False
 
 requirements:
   - requirements.txt:
       update: all
-      pin: True
-  - requirements_2.7.txt:
-      update: insecure
       pin: True
