Use exec when starting the server under Docker
This way the shell wrapper does not remain, allowing signals sent by
container orchestration systems and such to pass to the node process
itself.

--- a/docker/mjml-tcpserver/Dockerfile
+++ b/docker/mjml-tcpserver/Dockerfile
@@ -15,4 +15,4 @@ ENV MJML_ARGS="--mjml.minify=true --mjml.validationLevel=strict"
 
 EXPOSE 28101
 
-ENTRYPOINT ["/bin/sh", "-c", "node tcpserver.js $MJML_ARGS --host=$HOST --port=$PORT"]
+ENTRYPOINT ["/bin/sh", "-c", "exec node tcpserver.js $MJML_ARGS --host=$HOST --port=$PORT"]
