Added MJML 4.3.0 in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,31 +13,37 @@ env:
   - DJANGO_VERSION="<1.9" MJML_VERSION=4.0.5
   - DJANGO_VERSION="<1.9" MJML_VERSION=4.1.2
   - DJANGO_VERSION="<1.9" MJML_VERSION=4.2.1
+  - DJANGO_VERSION="<1.9" MJML_VERSION=4.3.0
 
   - DJANGO_VERSION="<1.10" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<1.10" MJML_VERSION=4.0.5
   - DJANGO_VERSION="<1.10" MJML_VERSION=4.1.2
   - DJANGO_VERSION="<1.10" MJML_VERSION=4.2.1
+  - DJANGO_VERSION="<1.10" MJML_VERSION=4.3.0
 
   - DJANGO_VERSION="<1.11" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<1.11" MJML_VERSION=4.0.5
   - DJANGO_VERSION="<1.11" MJML_VERSION=4.1.2
   - DJANGO_VERSION="<1.11" MJML_VERSION=4.2.1
+  - DJANGO_VERSION="<1.11" MJML_VERSION=4.3.0
 
   - DJANGO_VERSION="<1.12" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<1.12" MJML_VERSION=4.0.5
   - DJANGO_VERSION="<1.12" MJML_VERSION=4.1.2
   - DJANGO_VERSION="<1.12" MJML_VERSION=4.2.1
+  - DJANGO_VERSION="<1.12" MJML_VERSION=4.3.0
 
   - DJANGO_VERSION="<2.1" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<2.1" MJML_VERSION=4.0.5
   - DJANGO_VERSION="<2.1" MJML_VERSION=4.1.2
   - DJANGO_VERSION="<2.1" MJML_VERSION=4.2.1
+  - DJANGO_VERSION="<2.1" MJML_VERSION=4.3.0
 
   - DJANGO_VERSION="<2.2" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<2.2" MJML_VERSION=4.0.5
   - DJANGO_VERSION="<2.2" MJML_VERSION=4.1.2
   - DJANGO_VERSION="<2.2" MJML_VERSION=4.2.1
+  - DJANGO_VERSION="<2.2" MJML_VERSION=4.3.0
 
 matrix:
   exclude:
@@ -45,11 +51,13 @@ matrix:
     - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.0.5 }
     - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.1.2 }
     - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.2.1 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.3.0 }
 
     - { python: "2.7", env: DJANGO_VERSION="<2.2" MJML_VERSION=3.3.5 }
     - { python: "2.7", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.0.5 }
     - { python: "2.7", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.1.2 }
     - { python: "2.7", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.2.1 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.3.0 }
 
 before_install:
   - . $HOME/.nvm/nvm.sh
