--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,9 @@ env:
   - DJANGO_VERSION="<2.2" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<2.2" MJML_VERSION=4.3.1
 
+  - DJANGO_VERSION="<2.3" MJML_VERSION=3.3.5
+  - DJANGO_VERSION="<2.3" MJML_VERSION=4.3.1
+
 matrix:
   exclude:
     - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.3.5 }
@@ -34,6 +37,9 @@ matrix:
 
     - { python: "2.7", env: DJANGO_VERSION="<2.2" MJML_VERSION=3.3.5 }
     - { python: "2.7", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.3.1 }
+
+    - { python: "2.7", env: DJANGO_VERSION="<2.3" MJML_VERSION=3.3.5 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.3" MJML_VERSION=4.3.1 }
 
 before_install:
   - . $HOME/.nvm/nvm.sh
