Add backend for HTTP servers
The MJML team has released a HTTP API for integration with non NodeJS
apps at https://mjml.io/api.

I've built a self hosted alternative which should be compatible with the
API the MJML team has built (without baked in auth).
https://github.com/danihodovic/mjml-http-server

It should work with both auth and non-auth, although I have not tested
the auth version since https://mjml.io/api is currently invite only.

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ before_install:
   - nvm use 8
 
 install:
-  - npm install mjml@$MJML_VERSION
+  - npm install mjml@$MJML_VERSION mjml-http-server
   - node_modules/.bin/mjml --version
   - pip install "Django$DJANGO_VERSION"
 
