--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ django>=1.8,<2.3; python_version >= "3"
 coverage==4.5.4
 six==1.12.0
 ndg-httpsclient>=0.5.1; python_version < "3"
+requests==2.22.0
