--- a/.travis.yml
+++ b/.travis.yml
@@ -7,59 +7,82 @@ python:
   - "3.5"
   - "3.6"
   - "3.7"
+  - "3.8"
 
 env:
   - DJANGO_VERSION="<1.9" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<1.9" MJML_VERSION=4.3.1
   - DJANGO_VERSION="<1.9" MJML_VERSION=4.4.0
+  - DJANGO_VERSION="<1.9" MJML_VERSION=4.5.1
 
   - DJANGO_VERSION="<1.10" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<1.10" MJML_VERSION=4.3.1
   - DJANGO_VERSION="<1.10" MJML_VERSION=4.4.0
+  - DJANGO_VERSION="<1.10" MJML_VERSION=4.1.1
 
   - DJANGO_VERSION="<1.11" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<1.11" MJML_VERSION=4.3.1
   - DJANGO_VERSION="<1.11" MJML_VERSION=4.4.0
+  - DJANGO_VERSION="<1.11" MJML_VERSION=4.5.1
 
   - DJANGO_VERSION="<1.12" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<1.12" MJML_VERSION=4.3.1
   - DJANGO_VERSION="<1.12" MJML_VERSION=4.4.0
+  - DJANGO_VERSION="<1.12" MJML_VERSION=4.5.1
 
   - DJANGO_VERSION="<2.1" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<2.1" MJML_VERSION=4.3.1
   - DJANGO_VERSION="<2.1" MJML_VERSION=4.4.0
+  - DJANGO_VERSION="<2.1" MJML_VERSION=4.5.1
 
   - DJANGO_VERSION="<2.2" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<2.2" MJML_VERSION=4.3.1
   - DJANGO_VERSION="<2.2" MJML_VERSION=4.4.0
+  - DJANGO_VERSION="<2.2" MJML_VERSION=4.5.1
 
   - DJANGO_VERSION="<2.3" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<2.3" MJML_VERSION=4.3.1
   - DJANGO_VERSION="<2.3" MJML_VERSION=4.4.0
+  - DJANGO_VERSION="<2.3" MJML_VERSION=4.5.1
+
+  - DJANGO_VERSION="<3.1" MJML_VERSION=3.3.5
+  - DJANGO_VERSION="<3.1" MJML_VERSION=4.3.1
+  - DJANGO_VERSION="<3.1" MJML_VERSION=4.4.0
+  - DJANGO_VERSION="<3.1" MJML_VERSION=4.5.1
 
 matrix:
   exclude:
     - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.3.5 }
     - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.3.1 }
     - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.4.0 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.5.1 }
 
     - { python: "2.7", env: DJANGO_VERSION="<2.2" MJML_VERSION=3.3.5 }
     - { python: "2.7", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.3.1 }
     - { python: "2.7", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.4.0 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.5.1 }
 
     - { python: "2.7", env: DJANGO_VERSION="<2.3" MJML_VERSION=3.3.5 }
     - { python: "2.7", env: DJANGO_VERSION="<2.3" MJML_VERSION=4.3.1 }
     - { python: "2.7", env: DJANGO_VERSION="<2.3" MJML_VERSION=4.4.0 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.3" MJML_VERSION=4.5.1 }
+
+    - { python: "2.7", env: DJANGO_VERSION="<3.1" MJML_VERSION=3.3.5 }
+    - { python: "2.7", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.3.1 }
+    - { python: "2.7", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.4.0 }
+    - { python: "2.7", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.5.1 }
 
 before_install:
   - . $HOME/.nvm/nvm.sh
-  - nvm install 8
-  - nvm use 8
+  - nvm install 12
+  - nvm use 12
 
 install:
+  - npm install -g mjml-http-server@0.0.3
   - npm install mjml@$MJML_VERSION
   - node_modules/.bin/mjml --version
   - pip install "Django$DJANGO_VERSION"
+  - pip install "requests>=2.19.0,<=2.23.0"
 
 script:
   - python tools.py test
