--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-wheel==0.33.4
-twine==1.13.0
+wheel==0.33.6
+twine==1.15.0; python_version < "3"
+twine==3.1.1; python >= "3"
 
 django<1.12; python_version < "3"
-django>=1.8,<2.3; python_version >= "3"
+django>=1.8,<3.1; python_version >= "3"
 coverage==4.5.4
-six==1.12.0
+six==1.13.0
 ndg-httpsclient>=0.5.1; python_version < "3"
+mock<3.1; python_version < "3"
+requests>=2.19.0
