removed develop branch

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 wheel==0.34.2
 twine==1.15.0; python_version < "3"
-twine==3.1.1; python >= "3"
-
+twine==3.1.1; python_version >= "3"
+coverage==5.0.3
 django<1.12; python_version < "3"
 django>=1.8,<3.1; python_version >= "3"
-coverage==5.0.3
-six==1.14.0
+six==1.14.0; python_version < "3"
 ndg-httpsclient>=0.5.1; python_version < "3"
 mock<3.1; python_version < "3"
 requests>=2.19.0
