--- a/.travis.yml
+++ b/.travis.yml
@@ -72,6 +72,71 @@ matrix:
     - { python: "2.7", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.4.0 }
     - { python: "2.7", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.5.1 }
 
+    - { python: "3.5", env: DJANGO_VERSION="<3.1" MJML_VERSION=3.3.5 }
+    - { python: "3.5", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.3.1 }
+    - { python: "3.5", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.4.0 }
+    - { python: "3.5", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.5.1 }
+
+    - { python: "3.6", env: DJANGO_VERSION="<1.9" MJML_VERSION=3.3.5 }
+    - { python: "3.6", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.3.1 }
+    - { python: "3.6", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.4.0 }
+    - { python: "3.6", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.5.1 }
+
+    - { python: "3.6", env: DJANGO_VERSION="<1.10" MJML_VERSION=3.3.5 }
+    - { python: "3.6", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.3.1 }
+    - { python: "3.6", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.4.0 }
+    - { python: "3.6", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.5.1 }
+
+    - { python: "3.6", env: DJANGO_VERSION="<1.11" MJML_VERSION=3.3.5 }
+    - { python: "3.6", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.3.1 }
+    - { python: "3.6", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.4.0 }
+    - { python: "3.6", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.5.1 }
+
+    - { python: "3.7", env: DJANGO_VERSION="<1.9" MJML_VERSION=3.3.5 }
+    - { python: "3.7", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.3.1 }
+    - { python: "3.7", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.4.0 }
+    - { python: "3.7", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.5.1 }
+
+    - { python: "3.7", env: DJANGO_VERSION="<1.10" MJML_VERSION=3.3.5 }
+    - { python: "3.7", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.3.1 }
+    - { python: "3.7", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.4.0 }
+    - { python: "3.7", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.5.1 }
+
+    - { python: "3.7", env: DJANGO_VERSION="<1.11" MJML_VERSION=3.3.5 }
+    - { python: "3.7", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.3.1 }
+    - { python: "3.7", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.4.0 }
+    - { python: "3.7", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.5.1 }
+
+    - { python: "3.8", env: DJANGO_VERSION="<1.9" MJML_VERSION=3.3.5 }
+    - { python: "3.8", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.3.1 }
+    - { python: "3.8", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.4.0 }
+    - { python: "3.8", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.5.1 }
+
+    - { python: "3.8", env: DJANGO_VERSION="<1.10" MJML_VERSION=3.3.5 }
+    - { python: "3.8", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.3.1 }
+    - { python: "3.8", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.4.0 }
+    - { python: "3.8", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.5.1 }
+
+    - { python: "3.8", env: DJANGO_VERSION="<1.11" MJML_VERSION=3.3.5 }
+    - { python: "3.8", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.3.1 }
+    - { python: "3.8", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.4.0 }
+    - { python: "3.8", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.5.1 }
+
+    - { python: "3.8", env: DJANGO_VERSION="<1.12" MJML_VERSION=3.3.5 }
+    - { python: "3.8", env: DJANGO_VERSION="<1.12" MJML_VERSION=4.3.1 }
+    - { python: "3.8", env: DJANGO_VERSION="<1.12" MJML_VERSION=4.4.0 }
+    - { python: "3.8", env: DJANGO_VERSION="<1.12" MJML_VERSION=4.5.1 }
+
+    - { python: "3.8", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.3.5 }
+    - { python: "3.8", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.3.1 }
+    - { python: "3.8", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.4.0 }
+    - { python: "3.8", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.5.1 }
+
+    - { python: "3.8", env: DJANGO_VERSION="<2.2" MJML_VERSION=3.3.5 }
+    - { python: "3.8", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.3.1 }
+    - { python: "3.8", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.4.0 }
+    - { python: "3.8", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.5.1 }
+
 before_install:
   - . $HOME/.nvm/nvm.sh
   - nvm install 12
