* Added `requests` in extras require in `setup.py`   * Added MJML 4.6.3 in tests   * Upgraded MJML to 4.6.3 in dockerfile   * Updated docs

--- a/docker/mjml-tcpserver/Dockerfile
+++ b/docker/mjml-tcpserver/Dockerfile
@@ -1,13 +1,15 @@
 FROM node:12-stretch
 
-ARG MJML_VERSION=4.5.1
+ARG MJML_VERSION=4.6.3
+ARG TCPSERVER_VERSION=0.9.0
 ARG APP_DIR=/app
 
 RUN npm install mjml@${MJML_VERSION}
 
 WORKDIR $APP_DIR
 
-COPY mjml/node/tcpserver.js $APP_DIR/
+RUN curl -L https://raw.githubusercontent.com/liminspace/django-mjml/$TCPSERVER_VERSION/mjml/node/tcpserver.js \
+    -o tcpserver.js
 
 ENV HOST="0.0.0.0"
 ENV PORT="28101"
@@ -15,4 +17,4 @@ ENV MJML_ARGS="--mjml.minify=true --mjml.validationLevel=strict"
 
 EXPOSE 28101
 
-ENTRYPOINT ["/bin/sh", "-c", "exec node tcpserver.js $MJML_ARGS --host=$HOST --port=$PORT"]
+CMD ["/bin/sh", "-c", "exec node tcpserver.js $MJML_ARGS --host=$HOST --port=$PORT"]
