--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: xenial
+dist: bionic
 
 language: python
 
@@ -14,41 +14,49 @@ env:
   - DJANGO_VERSION="<1.9" MJML_VERSION=4.3.1
   - DJANGO_VERSION="<1.9" MJML_VERSION=4.4.0
   - DJANGO_VERSION="<1.9" MJML_VERSION=4.5.1
+  - DJANGO_VERSION="<1.9" MJML_VERSION=4.6.3
 
   - DJANGO_VERSION="<1.10" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<1.10" MJML_VERSION=4.3.1
   - DJANGO_VERSION="<1.10" MJML_VERSION=4.4.0
-  - DJANGO_VERSION="<1.10" MJML_VERSION=4.1.1
+  - DJANGO_VERSION="<1.10" MJML_VERSION=4.5.1
+  - DJANGO_VERSION="<1.10" MJML_VERSION=4.6.3
 
   - DJANGO_VERSION="<1.11" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<1.11" MJML_VERSION=4.3.1
   - DJANGO_VERSION="<1.11" MJML_VERSION=4.4.0
   - DJANGO_VERSION="<1.11" MJML_VERSION=4.5.1
+  - DJANGO_VERSION="<1.11" MJML_VERSION=4.6.3
 
   - DJANGO_VERSION="<1.12" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<1.12" MJML_VERSION=4.3.1
   - DJANGO_VERSION="<1.12" MJML_VERSION=4.4.0
   - DJANGO_VERSION="<1.12" MJML_VERSION=4.5.1
+  - DJANGO_VERSION="<1.12" MJML_VERSION=4.6.3
 
   - DJANGO_VERSION="<2.1" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<2.1" MJML_VERSION=4.3.1
   - DJANGO_VERSION="<2.1" MJML_VERSION=4.4.0
   - DJANGO_VERSION="<2.1" MJML_VERSION=4.5.1
+  - DJANGO_VERSION="<2.1" MJML_VERSION=4.6.3
 
   - DJANGO_VERSION="<2.2" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<2.2" MJML_VERSION=4.3.1
   - DJANGO_VERSION="<2.2" MJML_VERSION=4.4.0
   - DJANGO_VERSION="<2.2" MJML_VERSION=4.5.1
+  - DJANGO_VERSION="<2.2" MJML_VERSION=4.6.3
 
   - DJANGO_VERSION="<2.3" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<2.3" MJML_VERSION=4.3.1
   - DJANGO_VERSION="<2.3" MJML_VERSION=4.4.0
   - DJANGO_VERSION="<2.3" MJML_VERSION=4.5.1
+  - DJANGO_VERSION="<2.3" MJML_VERSION=4.6.3
 
   - DJANGO_VERSION="<3.1" MJML_VERSION=3.3.5
   - DJANGO_VERSION="<3.1" MJML_VERSION=4.3.1
   - DJANGO_VERSION="<3.1" MJML_VERSION=4.4.0
   - DJANGO_VERSION="<3.1" MJML_VERSION=4.5.1
+  - DJANGO_VERSION="<3.1" MJML_VERSION=4.6.3
 
 matrix:
   exclude:
@@ -56,86 +64,103 @@ matrix:
     - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.3.1 }
     - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.4.0 }
     - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.5.1 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.6.3 }
 
     - { python: "2.7", env: DJANGO_VERSION="<2.2" MJML_VERSION=3.3.5 }
     - { python: "2.7", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.3.1 }
     - { python: "2.7", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.4.0 }
     - { python: "2.7", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.5.1 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.6.3 }
 
     - { python: "2.7", env: DJANGO_VERSION="<2.3" MJML_VERSION=3.3.5 }
     - { python: "2.7", env: DJANGO_VERSION="<2.3" MJML_VERSION=4.3.1 }
     - { python: "2.7", env: DJANGO_VERSION="<2.3" MJML_VERSION=4.4.0 }
     - { python: "2.7", env: DJANGO_VERSION="<2.3" MJML_VERSION=4.5.1 }
+    - { python: "2.7", env: DJANGO_VERSION="<2.3" MJML_VERSION=4.6.3 }
 
     - { python: "2.7", env: DJANGO_VERSION="<3.1" MJML_VERSION=3.3.5 }
     - { python: "2.7", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.3.1 }
     - { python: "2.7", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.4.0 }
     - { python: "2.7", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.5.1 }
+    - { python: "2.7", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.6.3 }
 
     - { python: "3.5", env: DJANGO_VERSION="<3.1" MJML_VERSION=3.3.5 }
     - { python: "3.5", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.3.1 }
     - { python: "3.5", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.4.0 }
     - { python: "3.5", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.5.1 }
+    - { python: "3.5", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.6.3 }
 
     - { python: "3.6", env: DJANGO_VERSION="<1.9" MJML_VERSION=3.3.5 }
     - { python: "3.6", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.3.1 }
     - { python: "3.6", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.4.0 }
     - { python: "3.6", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.5.1 }
+    - { python: "3.6", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.6.3 }
 
     - { python: "3.6", env: DJANGO_VERSION="<1.10" MJML_VERSION=3.3.5 }
     - { python: "3.6", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.3.1 }
     - { python: "3.6", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.4.0 }
     - { python: "3.6", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.5.1 }
+    - { python: "3.6", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.6.3 }
 
     - { python: "3.6", env: DJANGO_VERSION="<1.11" MJML_VERSION=3.3.5 }
     - { python: "3.6", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.3.1 }
     - { python: "3.6", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.4.0 }
     - { python: "3.6", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.5.1 }
+    - { python: "3.6", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.6.3 }
 
     - { python: "3.7", env: DJANGO_VERSION="<1.9" MJML_VERSION=3.3.5 }
     - { python: "3.7", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.3.1 }
     - { python: "3.7", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.4.0 }
     - { python: "3.7", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.5.1 }
+    - { python: "3.7", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.6.3 }
 
     - { python: "3.7", env: DJANGO_VERSION="<1.10" MJML_VERSION=3.3.5 }
     - { python: "3.7", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.3.1 }
     - { python: "3.7", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.4.0 }
     - { python: "3.7", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.5.1 }
+    - { python: "3.7", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.6.3 }
 
     - { python: "3.7", env: DJANGO_VERSION="<1.11" MJML_VERSION=3.3.5 }
     - { python: "3.7", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.3.1 }
     - { python: "3.7", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.4.0 }
     - { python: "3.7", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.5.1 }
+    - { python: "3.7", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.6.3 }
 
     - { python: "3.8", env: DJANGO_VERSION="<1.9" MJML_VERSION=3.3.5 }
     - { python: "3.8", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.3.1 }
     - { python: "3.8", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.4.0 }
     - { python: "3.8", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.5.1 }
+    - { python: "3.8", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.6.3 }
 
     - { python: "3.8", env: DJANGO_VERSION="<1.10" MJML_VERSION=3.3.5 }
     - { python: "3.8", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.3.1 }
     - { python: "3.8", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.4.0 }
     - { python: "3.8", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.5.1 }
+    - { python: "3.8", env: DJANGO_VERSION="<1.10" MJML_VERSION=4.6.3 }
 
     - { python: "3.8", env: DJANGO_VERSION="<1.11" MJML_VERSION=3.3.5 }
     - { python: "3.8", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.3.1 }
     - { python: "3.8", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.4.0 }
     - { python: "3.8", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.5.1 }
+    - { python: "3.8", env: DJANGO_VERSION="<1.11" MJML_VERSION=4.6.3 }
 
     - { python: "3.8", env: DJANGO_VERSION="<1.12" MJML_VERSION=3.3.5 }
     - { python: "3.8", env: DJANGO_VERSION="<1.12" MJML_VERSION=4.3.1 }
     - { python: "3.8", env: DJANGO_VERSION="<1.12" MJML_VERSION=4.4.0 }
     - { python: "3.8", env: DJANGO_VERSION="<1.12" MJML_VERSION=4.5.1 }
+    - { python: "3.8", env: DJANGO_VERSION="<1.12" MJML_VERSION=4.6.3 }
 
     - { python: "3.8", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.3.5 }
     - { python: "3.8", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.3.1 }
     - { python: "3.8", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.4.0 }
     - { python: "3.8", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.5.1 }
+    - { python: "3.8", env: DJANGO_VERSION="<2.1" MJML_VERSION=4.6.3 }
 
     - { python: "3.8", env: DJANGO_VERSION="<2.2" MJML_VERSION=3.3.5 }
     - { python: "3.8", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.3.1 }
     - { python: "3.8", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.4.0 }
     - { python: "3.8", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.5.1 }
+    - { python: "3.8", env: DJANGO_VERSION="<2.2" MJML_VERSION=4.6.3 }
 
 before_install:
   - . $HOME/.nvm/nvm.sh
@@ -147,7 +172,7 @@ install:
   - npm install mjml@$MJML_VERSION
   - node_modules/.bin/mjml --version
   - pip install "Django$DJANGO_VERSION"
-  - pip install "requests>=2.19.0,<=2.23.0"
+  - pip install "requests>=2.20.0,<=2.24.0"
 
 script:
   - python tools.py test
