--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,12 @@ env:
   - DJANGO_VERSION="<3.1" MJML_VERSION=4.5.1
   - DJANGO_VERSION="<3.1" MJML_VERSION=4.6.3
 
+  - DJANGO_VERSION="<3.2" MJML_VERSION=3.3.5
+  - DJANGO_VERSION="<3.2" MJML_VERSION=4.3.1
+  - DJANGO_VERSION="<3.2" MJML_VERSION=4.4.0
+  - DJANGO_VERSION="<3.2" MJML_VERSION=4.5.1
+  - DJANGO_VERSION="<3.2" MJML_VERSION=4.6.3
+
 matrix:
   exclude:
     - { python: "2.7", env: DJANGO_VERSION="<2.1" MJML_VERSION=3.3.5 }
@@ -89,6 +95,18 @@ matrix:
     - { python: "3.5", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.4.0 }
     - { python: "3.5", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.5.1 }
     - { python: "3.5", env: DJANGO_VERSION="<3.1" MJML_VERSION=4.6.3 }
+
+    - { python: "2.7", env: DJANGO_VERSION="<3.2" MJML_VERSION=3.3.5 }
+    - { python: "2.7", env: DJANGO_VERSION="<3.2" MJML_VERSION=4.3.1 }
+    - { python: "2.7", env: DJANGO_VERSION="<3.2" MJML_VERSION=4.4.0 }
+    - { python: "2.7", env: DJANGO_VERSION="<3.2" MJML_VERSION=4.5.1 }
+    - { python: "2.7", env: DJANGO_VERSION="<3.2" MJML_VERSION=4.6.3 }
+
+    - { python: "3.5", env: DJANGO_VERSION="<3.2" MJML_VERSION=3.3.5 }
+    - { python: "3.5", env: DJANGO_VERSION="<3.2" MJML_VERSION=4.3.1 }
+    - { python: "3.5", env: DJANGO_VERSION="<3.2" MJML_VERSION=4.4.0 }
+    - { python: "3.5", env: DJANGO_VERSION="<3.2" MJML_VERSION=4.5.1 }
+    - { python: "3.5", env: DJANGO_VERSION="<3.2" MJML_VERSION=4.6.3 }
 
     - { python: "3.6", env: DJANGO_VERSION="<1.9" MJML_VERSION=3.3.5 }
     - { python: "3.6", env: DJANGO_VERSION="<1.9" MJML_VERSION=4.3.1 }
