--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
       NODE_VER: 14
     strategy:
       matrix:
-        django-ltver: [1.12, 2.1, 2.2, 2.3, 3.1, 3.2, 3.3]
+        django-ltver: [1.12, 2.1, 2.2, 2.3, 3.1, 3.2, 3.3, 4.0]
         mjml-ver: [4.4.0, 4.5.1, 4.6.3, 4.7.1, 4.8.2, 4.9.3, 4.10.1]
       fail-fast: false
     steps:
@@ -86,7 +86,7 @@ jobs:
       NODE_VER: 14
     strategy:
       matrix:
-        django-ltver: [1.12, 2.1, 2.2, 2.3, 3.1, 3.2, 3.3]
+        django-ltver: [1.12, 2.1, 2.2, 2.3, 3.1, 3.2, 3.3, 4.0]
         mjml-ver: [4.4.0, 4.5.1, 4.6.3, 4.7.1, 4.8.2, 4.9.3, 4.10.1]
       fail-fast: false
     steps:
@@ -122,7 +122,7 @@ jobs:
       NODE_VER: 14
     strategy:
       matrix:
-        django-ltver: [2.3, 3.1, 3.2, 3.3]
+        django-ltver: [2.3, 3.1, 3.2, 3.3, 4.0]
         mjml-ver: [4.4.0, 4.5.1, 4.6.3, 4.7.1, 4.8.2, 4.9.3, 4.10.1]
       fail-fast: false
     steps:
@@ -158,7 +158,7 @@ jobs:
       NODE_VER: 14
     strategy:
       matrix:
-        django-ltver: [2.3, 3.1, 3.2, 3.3]
+        django-ltver: [2.3, 3.1, 3.2, 3.3, 4.0]
         mjml-ver: [4.4.0, 4.5.1, 4.6.3, 4.7.1, 4.8.2, 4.9.3, 4.10.1]
       fail-fast: false
     steps:
