Added supporting Django 5.0

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -135,7 +135,7 @@ jobs:
       NODE_VER: 14
     strategy:
       matrix:
-        django-ver: [ '<2.3', '<3.1', '<3.2', '<3.3', '<4.1', '<4.2' ]
+        django-ver: [ '<2.3', '<3.1', '<3.2', '<3.3', '<4.1', '<4.2', '<5.0', '<5.1' ]
         mjml-ver: [ '4.6.3', '4.7.1', '4.8.2', '4.9.3', '4.10.4', '4.11.0', '4.12.0', '4.13.0', '4.14.0' ]
         tcp-server-ver: [ 'v1.1' ]
       fail-fast: false
@@ -196,7 +196,7 @@ jobs:
       NODE_VER: 14
     strategy:
       matrix:
-        django-ver: [ '<2.3', '<3.1', '<3.2', '<3.3', '<4.1', '<4.2' ]
+        django-ver: [ '<2.3', '<3.1', '<3.2', '<3.3', '<4.1', '<4.2', '<5.0', '<5.1' ]
         mjml-ver: [ '4.6.3', '4.7.1', '4.8.2', '4.9.3', '4.10.4', '4.11.0', '4.12.0', '4.13.0', '4.14.0' ]
         tcp-server-ver: [ 'v1.1' ]
       fail-fast: false
@@ -257,7 +257,7 @@ jobs:
       NODE_VER: 14
     strategy:
       matrix:
-        django-ver: [ '<3.3', '<4.1', '<4.2', '<4.3' ]
+        django-ver: [ '<3.3', '<4.1', '<4.2', '<5.0', '<5.1' ]
         mjml-ver: [ '4.6.3', '4.7.1', '4.8.2', '4.9.3', '4.10.4', '4.11.0', '4.12.0', '4.13.0', '4.14.0' ]
         tcp-server-ver: [ 'v1.1' ]
       fail-fast: false
@@ -318,7 +318,7 @@ jobs:
       NODE_VER: 14
     strategy:
       matrix:
-        django-ver: [ '<4.2', '<4.3' ]
+        django-ver: [ '<4.2', '<5.0', '<5.1' ]
         mjml-ver: [ '4.6.3', '4.7.1', '4.8.2', '4.9.3', '4.10.4', '4.11.0', '4.12.0', '4.13.0', '4.14.0' ]
         tcp-server-ver: [ 'v1.1' ]
       fail-fast: false
