--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,15 +6,9 @@ repos:
     rev: 'v0.6.2'
     hooks:
       - id: ruff
-        args: [ --fix ]
+        args:
+          - --fix
       - id: ruff-format
-
-  - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.9
-    hooks:
-      - id: bandit
-        args: [ "-c", "pyproject.toml" ]
-        additional_dependencies: ["bandit[toml]"]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.11.2
@@ -22,3 +16,10 @@ repos:
       - id: mypy
         additional_dependencies:
           - types-requests
+
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.9
+    hooks:
+      - id: bandit
+        args: [ "-c", "pyproject.toml" ]
+        additional_dependencies: [ "bandit[toml]" ]
