--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,12 +34,12 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ matrix.python-ver }}-${{ hashFiles('requirements.test.txt') }}
+          key: ${{ runner.os }}-pip-${{ matrix.python-ver }}-${{ hashFiles('requirements-tests.txt') }}
           restore-keys:
             ${{ runner.os }}-pip-${{ matrix.python-ver }}-
       - name: Install Python dependencies
         run: |
-          pip install -U -r requirements.test.txt
+          pip install -U -r requirements-tests.txt
           pip install -U "Django${{ matrix.django-ver }}"
       - name: Set up Node.js ${{ env.NODE_VER }}
         uses: actions/setup-node@v4
@@ -95,12 +95,12 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ matrix.python-ver }}-${{ hashFiles('requirements.test.txt') }}
+          key: ${{ runner.os }}-pip-${{ matrix.python-ver }}-${{ hashFiles('requirements-tests.txt') }}
           restore-keys:
             ${{ runner.os }}-pip-${{ matrix.python-ver }}-
       - name: Install Python dependencies
         run: |
-          pip install -U -r requirements.test.txt
+          pip install -U -r requirements-tests.txt
           pip install "Django${{ matrix.django-ver }}"
       - name: Set up Node.js ${{ env.NODE_VER }}
         uses: actions/setup-node@v4
